fix tagline spacing

--- a/css/master.css
+++ b/css/master.css
@@ -77,6 +77,8 @@ figure {
   min-width: 200px;
   border: 3px solid aliceblue;
   max-width: 300px;
+  width: 30%;
+  box-sizing: border-box;
 }
 
 header {
@@ -104,7 +106,6 @@ logo img {
 }
 
 tagline {
-  padding-bottom: 8px;
 }
 
 footer {
